[gd_scene load_steps=8 format=3 uid="uid://dps0a5js2rxa6"]

[ext_resource type="Script" uid="uid://dbxy0aqwvedm1" path="res://instances/pnl_search_user.gd" id="1_5t2mi"]
[ext_resource type="Texture2D" uid="uid://dqxomv5pykt6i" path="res://ui/bootstrap_icons/search-heart.svg" id="1_c1yuu"]
[ext_resource type="Texture2D" uid="uid://cfs6apvwuggtt" path="res://ui/bootstrap_icons/person-bounding-box.svg" id="2_phxtu"]
[ext_resource type="Texture2D" uid="uid://bwsg8be7ife7b" path="res://ui/sprites/twitch_user_profile_pic.png" id="3_5t2mi"]
[ext_resource type="PackedScene" uid="uid://csqa2q3atku2i" path="res://instances/pnl_connect.tscn" id="4_h73xo"]
[ext_resource type="Texture2D" uid="uid://c2bfapbqs6yn8" path="res://ui/bootstrap_icons/floppy-fill.png" id="5_h73xo"]
[ext_resource type="Texture2D" uid="uid://bakllpvm882ei" path="res://ui/bootstrap_icons/person-heart.png" id="6_h73xo"]

[node name="pnl_search_twitch_user" type="PanelContainer"]
offset_right = 926.0
offset_bottom = 199.0
script = ExtResource("1_5t2mi")

[node name="vb" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="search" type="HBoxContainer" parent="vb"]
layout_mode = 2

[node name="ico2" type="TextureRect" parent="vb/search"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("1_c1yuu")
expand_mode = 1
stretch_mode = 5

[node name="ico" type="TextureRect" parent="vb/search"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2_phxtu")
expand_mode = 1
stretch_mode = 5

[node name="ln_search_username" type="LineEdit" parent="vb/search"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "search by username"

[node name="ln_search_user_id" type="LineEdit" parent="vb/search"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "search by user ID"

[node name="twitch_info" type="HBoxContainer" parent="vb"]
layout_mode = 2

[node name="tex_profile_pic" type="TextureRect" parent="vb/twitch_info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
texture = ExtResource("3_5t2mi")
expand_mode = 2
stretch_mode = 5

[node name="vb" type="VBoxContainer" parent="vb/twitch_info"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ln_username" type="LineEdit" parent="vb/twitch_info/vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "username"
editable = false

[node name="ln_display_name" type="LineEdit" parent="vb/twitch_info/vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "display name"
editable = false

[node name="ln_user_id" type="LineEdit" parent="vb/twitch_info/vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "user id"
editable = false

[node name="ln_profile_picture_url" type="LineEdit" parent="vb/twitch_info/vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "profile picture url"
editable = false

[node name="hb" type="HBoxContainer" parent="vb/twitch_info/vb"]
layout_mode = 2

[node name="lb" type="Label" parent="vb/twitch_info/vb/hb"]
layout_mode = 2
text = "Twich chat colour"

[node name="cr_user_twitch_irc_color" type="ColorRect" parent="vb/twitch_info/vb/hb"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="btn_save" type="Button" parent="vb"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save new user"
icon = ExtResource("5_h73xo")
expand_icon = true

[node name="btn_update" type="Button" parent="vb"]
layout_mode = 2
size_flags_horizontal = 3
text = "Update user"
icon = ExtResource("6_h73xo")
expand_icon = true

[node name="pnl_connect_to_gift" parent="." instance=ExtResource("4_h73xo")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="pressed" from="vb/btn_save" to="." method="_on_btn_save_pressed"]
[connection signal="pressed" from="vb/btn_update" to="." method="_on_btn_update_pressed"]
